Psuhing up with Error

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4937,7 +4937,7 @@ Start custom css
   font-weight: 300; }
 
 .album {
-  padding-top: 3rem;
+  padding-top: 5rem;
   padding-bottom: 3rem;
   background-color: #f7f7f7; }
 
@@ -4958,5 +4958,8 @@ footer {
   padding-bottom: 3rem; }
   footer p {
     margin-bottom: .25rem; }
+
+.img {
+  max-width: 100%; }
 
 /*# sourceMappingURL=app.css.map */
